# rm_legged_balance

rm_legged_balance_control/: CMakeLists.txt  package.xml
rm_legged_balance_control/config/mpc/: task.info
rm_legged_balance_control/include/rm_legged_balance_control/: LeggedBalanceControlCmd.h  LeggedBalanceInterface.h  LeggedBalanceParameters.h  LeggedBalanceSystemDynamics.h  definitions.h  package_path.h.in
rm_legged_balance_control/include/rm_legged_balance_control/constraint/: PitchConstraint.h  PowerConstraintCppAd.h  TorqueConstraint.h
rm_legged_balance_control/src/: LeggedBalanceInterface.cpp  LeggedBalanceSystemDynamics.cpp
rm_legged_balance_control_ros/: CMakeLists.txt  controllers_plugins.xml  package.xml
rm_legged_balance_control_ros/config/: controllers.yaml
rm_legged_balance_control_ros/include/rm_legged_balance_control_ros/: LeggedBalanceController.h  LeggedBalanceVisualization.h  VMC.h
rm_legged_balance_control_ros/include/rm_legged_balance_control_ros/synchronized_module/: RosReferenceManager.h
rm_legged_balance_control_ros/include/rm_legged_balance_control_ros/vmc/: leg_conv.h  leg_pos.h  leg_spd.h
rm_legged_balance_control_ros/launch/: balance_ipm.launch  load_controller.launch  visualize.launch
rm_legged_balance_control_ros/src/: DummyLeggedNode.cpp  LeggedBalanceController.cpp  LeggedBalanceIpmMpcNode.cpp  LeggedBalanceVisualization.cpp  VMC.cpp
rm_legged_balance_control_ros/src/synchronized_module/: RosReferenceManager.cpp
rm_legged_balance_control_ros/src/vmc/: leg_conv.c  leg_pos.c  leg_spd.c
